# market_maker

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
common/: Cargo.toml
common/src/: latency.rs  lib.rs  types.rs
config/: avellaneda.toml
connectors-bitmex/: Cargo.toml  book_ws_dump.txt  instrument.txt
connectors-bitmex/src/: lib.rs  types.rs
connectors-tardis/: Cargo.toml
connectors-tardis/src/: connector.rs  error.rs  lib.rs
connectors-tardis/src/cursor/: book.rs  event.rs  generic.rs  merge.rs  mod.rs  quote.rs  trade.rs
connectors-tardis/tests/: test_replay_data.rs
engine/: Cargo.toml  execution.rs  hashmap_book_timing.txt  tree_book_timing.txt
engine/src/: arbitrage.rs  book.rs  config.rs  execution.rs  lib.rs  matching.rs  penetration.rs  position.rs  regression.rs  strategy_factory.rs  volatility.rs
engine/src/features/: build.rs  mod.rs  passthrough.rs  sequenced.rs  transform.rs
engine/src/output/: console.rs  csv.rs  event.rs  mod.rs  sink.rs
example/: backtest.toml  live.toml
frontend/: depth.html  pen_hist.html  penetration_histogram_webpage.jsx
strategy/: Cargo.toml
strategy/src/: avellaneda.rs  lib.rs  momentum.rs  runner.rs  sequencer.rs  traits.rs
strategy/tests/: strategy_basic.rs  test_momentum_strategy.rs
tests/: test_momentum_strategy.rs
utils/: Cargo.toml
utils/src/: candle_service.rs  candles.rs  ewma.rs  forward.rs  lib.rs
