[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
common = { version = "0.1.0", path = "../common" }
engine = { version = "0.1.0", path = "../engine" }
tracing-subscriber = "0.3.22"
