[package]
name = "connectors-bitmex"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { version = "0.1.0", path = "../common" }
futures-util = "0.3.31"
serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1.89"
reqwest = { version="0.12.24", features = ["json"]}
tracing = "0.1.44"
