[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
connectors-bitmex = { path = "../connectors-bitmex" }
connectors-bitvavo = { path = "../connectors-bitvavo" }
common = { version = "0.1.0", path = "../common" }
utils = { version = "0.1.0", path = "../utils/"}
strategy = { version = "0.1.0", path = "../strategy/"}
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
console-subscriber = "0.4.1"
nalgebra = "0.34.1"
rand = "0.9.2"
chrono = "0.4.42"
